--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "formik": "^2.2.9",
+    "html-react-parser": "^3.0.16",
+    "image-compressor.js": "^1.1.4",
     "mui-image": "^1.0.7",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-google-charts": "^4.0.0",
     "react-quill": "^2.0.0",
